microservices-app/k8s/falco-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falco
  labels:
    project: ecommerce-platform
    name: falco
