microservices-app/k8s/audit-kafka-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-kafka-producer
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-kafka-producer
  template:
    metadata:
      labels:
        app: audit-kafka-producer
    spec:
      nodeSelector:
        kubernetes.io/hostname: minikube
      containers:
        - name: audit-kafka-producer
          image: python:3.11-slim
          command: ["/bin/sh", "-c"]
          args:
          - pip install kafka-python && python -u /app/producer.py
          volumeMounts:
            - name: producer-code
              mountPath: /app
            - name: audit-log
              mountPath: /host/var/log/kubernetes/audit
              readOnly: true
      volumes:
        - name: producer-code
          configMap:
            name: audit-kafka-producer-code
        - name: audit-log
          hostPath:
            path: /var/log/kubernetes/audit
            type: Directory
