microservices-app/k8s/event-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-processor
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-processor
  template:
    metadata:
      labels:
        app: event-processor
    spec:
      containers:
        - name: event-processor
          image: event-processor:latest
          imagePullPolicy: Never
