microservices-app/k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: notification-ns
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
