microservices-app/k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order-ns
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
