microservices-app/k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-ns
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
