microservices-app/k8s/allow-falco-to-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-falco-to-kafka
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app: kafka
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: falco
      ports:
        - protocol: TCP
          port: 29092
        - protocol: TCP
          port: 9092
